# superbowl_LX

./: LICENSE  README.md
live-data-stream/: .env.example  CLAUDE.md  Dockerfile  PLAN.md  README.md  REQUIREMENTS.md  pyproject.toml
live-data-stream/app/: config.py  fetcher.py  main.py  models.py  poller.py  supabase_client.py  transformer.py
live-data-stream/sql/: create_tables.sql
live-data-stream/tests/: conftest.py  test_fetcher.py  test_models.py  test_poller.py  test_transformer.py
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/src/: __init__.py  config.py  server.py  supabase.py  tools.py
mcp-server/tests/: __init__.py  test_tools.py
